# calculadora-ed221

./: CMakeLists.txt  README.md  calc  calculadora  calculadora.c  calculadora.h  data.h  interface.c  interface.h  main.c  matriz.jh  pilha.c  pilha.h  public_ssh_key.pub  teste  teste.c  v.c
